Created project folder structure

--- a/.gitignore
+++ b/.gitignore
@@ -16,10 +16,6 @@
 *.dylib
 *.dll
 
-# Fortran module files
-*.mod
-*.smod
-
 # Compiled Static libraries
 *.lai
 *.la
@@ -31,4 +27,20 @@
 *.out
 *.app
 
-build/
+# Emacs buffers
+*.cpp~
+*.hpp~
+*.#.cpp
+*.#.hpp
+
+*.gitignore~
+*makefile~
+
+
+
+#don't push contents of build or SFML, it's all junk
+build/*
+SFML/*
+#but keep the directories
+!build/.gitkeep
+!SFML/.gitkeep
