--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,8 @@
 *.gitignore~
 *makefile~
 
-
+# Visual Studio Code Project Directory
+.vscode
 
 #don't push contents of build or SFML, it's all junk
 build/*
