--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,3 +14,8 @@ find_package(SFML 2.5 COMPONENTS graphics audio REQUIRED)
 
 add_executable(pong ${SOURCES} )
 target_link_libraries(pong sfml-graphics sfml-audio)
+
+file(COPY assets DESTINATION ${CMAKE_BINARY_DIR})
+
+file(GLOB SFML_DLL "SFML/*.dll")
+file(COPY ${SFML_DLL} DESTINATION ${CMAKE_BINARY_DIR})
