--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "preLaunchTask": "build game",
+            // "preLaunchTask": "build game",
             "linux": {
                 "cwd": "${workspaceFolder}/build",
                 "program": "${workspaceFolder}/build/pong",
